feat : 카카오 라이브러리 추가 및 API 키 설정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    dataBinding{
+    dataBinding {
+        enabled = true
+    }
+    viewBinding {
         enabled = true
     }
 }
@@ -60,4 +63,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // Kakao Map
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
 }
