--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,18 +20,17 @@
         android:theme="@style/Theme.DLP"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="c63eda8c2e73ef7fa4e7970a131f0ed9" />
