--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     // GPS 정보를 가져오기 위한 라이브러리 (fusedLocationManager)
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
+    // Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
