--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -40,6 +41,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.1'
     def lifecycle_version = "2.5.1"
     def room_version = "2.2.3"
     // ViewModel
@@ -78,4 +80,7 @@ dependencies {
     // GPS 정보를 가져오기 위한 라이브러리 (fusedLocationManager)
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
+    // FCM
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
