--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,29 +21,34 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.vote.VoteDoneActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <meta-data
             android:name="android.app.lib_name"
             android:value="" />
         <activity
             android:name=".ui.vote.VoteActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <meta-data
             android:name="android.app.lib_name"
             android:value="" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <data
+                    android:scheme="deeplink"
+                    android:host="view" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="c63eda8c2e73ef7fa4e7970a131f0ed9" />
