--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,13 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.vote.VoteDoneActivity"
-            android:exported="false" />
+            android:exported="true" />
         <meta-data
             android:name="android.app.lib_name"
             android:value="" />
         <activity
             android:name=".ui.vote.VoteActivity"
-            android:exported="false" />
+            android:exported="true" />
         <meta-data
             android:name="android.app.lib_name"
             android:value="" />
@@ -49,6 +49,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+
         <service
             android:name=".FCM_Service.MyFirebaseMessagingService"
             android:exported="false">
